workaround to prevent long systemwarn messages overflowing entire toplogo for small windows
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@4826 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/skin/migrid-basic/ui-v2.custom.css
+++ b/mig/images/skin/migrid-basic/ui-v2.custom.css
@@ -42,6 +42,11 @@ h1 {
   background: url("background_greypattern.png") repeat scroll left center #aaa;
 }
 
+/* NOTE: prevent long systemwarn from making toplogo overflow completely */
+#toplogocenter {
+    max-width: calc(100% - 200px);
+}
+
 /* Hide touchscreen toggle now we have toolbox button on all entries */
 #fm_toggle_touchscreen, #fm_touchscreen_label {
     display: none;
