--- a/mig/images/skin/sif-ucph-science/ui-v2.custom.css
+++ b/mig/images/skin/sif-ucph-science/ui-v2.custom.css
@@ -35,6 +35,11 @@
     padding-top: 10px;
 }
 
+/* NOTE: prevent long systemwarn from making toplogo overflow completely */
+#toplogocenter {
+    max-width: calc(100% - 340px);
+}
+
 /* Hide touchscreen toggle now we have toolbox button on all entries */
 #fm_toggle_touchscreen, #fm_touchscreen_label {
     display: none;
